--- a/index.html
+++ b/index.html
@@ -768,47 +768,47 @@ var surveyJSON = {
             },
             {
               "value": "GOVT. HARDAYAL SEC.SCH., DEVIPURA",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT. S.K. SR.SEC.SCH. SIKAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT.P.SCH. BALMIKI MOHALLA SIKAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT.P.SCH., FATEHPUR ROAD SIKAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT.P.SCH., NAVODI KOTHI SIKAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT.P.SCH., WARD N. SIKAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT.U.P.SCH., AMBEDKARNAGAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT.U.P.SCH., ANAND NAGAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT.U.P.SCH., MHADAW SIKAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT.U.P.SCH., NAYKAN SIKAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "RADHA KRISHNA MAROO GOVT.GIRLS SR.SEC SCHOOL, SIKAR",
-              "visibleIf": "{peeoName} = 'NP_SIKAR(SK'"
+              "visibleIf": "{peeoName} = 'NP_SIKAR(SK)'"
             },
             {
               "value": "GOVT. P. SCH., DHANI CHOSALA KI",
