--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Smile 2 Daily Progress Tracker - Block Piprali</title>
+    <title>स्माइल-3.0 एक बार बेसिक सूचना  - ब्लाक पिपराली</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-language" content="en">
