--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ width:100%;
 Survey.StylesManager.applyTheme("modern");
 
 var surveyJSON = {
-  "title": "Smile 2 Daily Progress Tracker",
+  "title": "स्माइल-3.0 एक बार बेसिक सूचना  - ब्लाक पिपराल",
   "description": "(Block Piprali)",
   "logo": "https://i.pinimg.com/originals/33/63/ed/3363ed08a390ecec6e6f3ec775a2fd2a.jpg",
   "logoWidth": 150,
