--- a/index.html
+++ b/index.html
@@ -1332,31 +1332,31 @@ var surveyJSON = {
        ]
       },
             {
-              "name": "Total Enrolment",
+              "name": "कुल नामांकन",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
             },
             {
-              "name": "HW Given (Online)",
+              "name": "watts app से जुड़े विद्यार्थी  (स्मार्ट फ़ोन )",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
             },
             {
-              "name": "HW Given (Offline)",
+              "name": "शिक्षा दर्शन लाभान्वित  (दूरदर्शन )",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
             },
             {
-              "name": "HW Collected (Online)",
+              "name": "शिक्षा वाणी लाभान्वित  (रेडियो )",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
             },
             {
-              "name": "HW Collected (Offline)",
+              "name": "विद्यालय आकर गृह कार्य लेने वाले ()",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
