--- a/index.html
+++ b/index.html
@@ -55,47 +55,47 @@ var surveyJSON = {
           "title": "पंचायत",
           "isRequired": true,
           "choices": [
-          "अभयपुरा"
-        "कटराथल"
-         "किशनपुरा"
-         "कुडली"
-         "कुशलपरा"
-        "कोलिडा"
-        "गुंगारा"
-       "गोकुलपुरा"
-        "चन्दपुरा"
-         "चैनपुरा"
-         "जुराठडा"
-        "ढाणी भदालान"
-        "तारपुरा"
-        "दादिया"
-         "दौलतपुरा"
-        "धर्मशाला"
-         "नानी"
-        "पलसाना"
-         "पलासरा"
-        "पिपराली"
-        "पुरोहित का बास"
-        "बाजौर"
-        "बेरी"
-        "भादवासी"
-        "मलकेडा"
-        "रधुनाथगढ"
-         "राजपुरा"
-         "राधाकिशनपुरा"
-         "रानोली"
-        "रैवासा"
-        "लढाणा"
-         "वैद की ढाणी"
-         "शिवसिहपुरा"
-         "शिश्यूं"
-         "श्यामगढ"
-         "श्यामपुरा"
-         "सांगरवा"
-        "सिंहासन"
-         "सीकर कल्याण "
-        "सीकर बजाज"
-         "सुजावास"
+          "अभयपुरा",
+        "कटराथल",
+         "किशनपुरा",
+         "कुडली",
+         "कुशलपरा",
+        "कोलिडा",
+        "गुंगारा",
+       "गोकुलपुरा",
+        "चन्दपुरा",
+         "चैनपुरा",
+         "जुराठडा",
+        "ढाणी भदालान",
+        "तारपुरा",
+        "दादिया",
+         "दौलतपुरा",
+        "धर्मशाला",
+         "नानी",
+        "पलसाना",
+         "पलासरा",
+        "पिपराली",
+        "पुरोहित का बास",
+        "बाजौर",
+        "बेरी",
+        "भादवासी",
+        "मलकेडा",
+        "रधुनाथगढ",
+         "राजपुरा",
+         "राधाकिशनपुरा",
+         "रानोली",
+        "रैवासा",
+        "लढाणा",
+         "वैद की ढाणी",
+         "शिवसिहपुरा",
+         "शिश्यूं",
+         "श्यामगढ",
+         "श्यामपुरा",
+         "सांगरवा",
+        "सिंहासन",
+         "सीकर कल्याण ",
+        "सीकर बजाज",
+         "सुजावास",
          "हर्ष"
           ],
           "choicesOrder": "asc"
