--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ var surveyJSON = {
         {
           "type": "dropdown",
           "name": "पंचायतनाम ",
-          "title": "पंचायत",
+          "title": "पंचायतनाम ",
           "isRequired": true,
           "choices": [
           "अभयपुरा",
