--- a/index.html
+++ b/index.html
@@ -1287,8 +1287,8 @@ var surveyJSON = {
 "visibleIf":"{पंचायतनाम }='हर्ष'"
 },
  {
-            "value":"रा.प्रा.वि. पलासिंया हर्ष",
-			"visibleIf":"{पंचायतनाम }='हर्ष'"
+            "value":"रा.प्रा.वि. पलासिंया हर्ष"
+	"visibleIf":"{पंचायतनाम }='हर्ष'"
  }
    ]
  },
