--- a/index.html
+++ b/index.html
@@ -1287,7 +1287,7 @@ var surveyJSON = {
 "visibleIf":"{पंचायतनाम }='हर्ष'"
 },
  {
-            "value":"रा.प्रा.वि. पलासिंया हर्ष"
+            "value":"रा.प्रा.वि. पलासिंया हर्ष",
 	"visibleIf":"{पंचायतनाम }='हर्ष'"
  }
    ]
