--- a/index.html
+++ b/index.html
@@ -1324,49 +1324,49 @@ var surveyJSON = {
                 "Class 12"
               ]
             },
-            {
-       "name": "Subject",
-       "cellType": "dropdown",
-       "isRequired": true,
-       "choices": [
-        "Hindi",
-        "English",
-        "Maths",
-        "EVS",
-        "Science",
-        "Social Science",
-        "Sanskrit",
-        "Urdu",
-        "Agriculture Science",
-        "Biology",
-        "Business Studies",
-        "Chemistry",
-        "Computer Science",
-        "Drawing",
-        "Economics",
-        "English Compulsory",
-        "English Literature",
-        "Farsi Literature",
-        "Financial Accountancy",
-        "Geography",
-        "Geology",
-        "Gujarati Literature",
-        "Hindi Compulsory",
-        "Hindi Literature",
-        "History",
-        "Home Science",
-        "Information Practices",
-        "Maths Optional",
-        "Physics",
-        "Political Science",
-        "Psychology",
-        "Public Administration",
-        "Punjabi",
-        "Sindhi Literature",
-        "Sociology",
-        "Urdu Literature"
-       ]
-      },
+//             {
+//        "name": "Subject",
+//        "cellType": "dropdown",
+//        "isRequired": true,
+//        "choices": [
+//         "Hindi",
+//         "English",
+//         "Maths",
+//         "EVS",
+//         "Science",
+//         "Social Science",
+//         "Sanskrit",
+//         "Urdu",
+//         "Agriculture Science",
+//         "Biology",
+//         "Business Studies",
+//         "Chemistry",
+//         "Computer Science",
+//         "Drawing",
+//         "Economics",
+//         "English Compulsory",
+//         "English Literature",
+//         "Farsi Literature",
+//         "Financial Accountancy",
+//         "Geography",
+//         "Geology",
+//         "Gujarati Literature",
+//         "Hindi Compulsory",
+//         "Hindi Literature",
+//         "History",
+//         "Home Science",
+//         "Information Practices",
+//         "Maths Optional",
+//         "Physics",
+//         "Political Science",
+//         "Psychology",
+//         "Public Administration",
+//         "Punjabi",
+//         "Sindhi Literature",
+//         "Sociology",
+//         "Urdu Literature"
+//        ]
+//       },
             {
               "name": "कुल नामांकन",
               "cellType": "text",
