--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ var surveyJSON = {
         },
         {
           "type": "dropdown",
-          "name": "विद्यालयनाम ",
+          "name": "SchoolName ",
           "title": "विद्यालय ",
           "isRequired": true,
           "choices": [
@@ -1431,9 +1431,9 @@ function sendDataToServer(survey) {
                     {
                     "entry.2081806952": data.date,
 					"entry.1997249446": data.peeoName,
-					"entry.1341436243": data.विध्यालायानाम ,
-					"entry.1365237637": q["कक्षा "],
-					"entry.993949122": q["Subject"],
+					"entry.1341436243": data.SchoolName ,
+					"entry.1022373984": q["कक्षा "],
+// 					"entry.993949122": q["Subject"],
 					"entry.791177180": q["कुल नामांकन"],
 					"entry.510921074": q["watts app से जुड़े विद्यार्थी संख्या  (स्मार्ट फ़ोन )"],
 					"entry.2111580312": q["शिक्षा दर्शन लाभान्वित संख्या   (दूरदर्शन )"],
