--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@ var surveyJSON = {
           "isRequired": true,
           "columns": [
             {
-              "name": "कक्षा ",
+              "name": "Class ",
               "cellType": "dropdown",
               "isRequired": true,
               "choices": [
@@ -1432,7 +1432,7 @@ function sendDataToServer(survey) {
                     "entry.2081806952": data.date,
 					"entry.1997249446": data.peeoName,
 					"entry.1341436243": data.SchoolName ,
-					"entry.1022373984": q["class "],
+					"entry.1022373984": q["Class "],
 // 					"entry.993949122": q["Subject"],
 					"entry.791177180": q["कुल नामांकन"],
 					"entry.510921074": q["watts app से जुड़े विद्यार्थी संख्या  (स्मार्ट फ़ोन )"],
