--- a/index.html
+++ b/index.html
@@ -1374,7 +1374,7 @@ var surveyJSON = {
               "inputType": "number"
             },
             {
-              "name": "watts app से जुड़े विद्यार्थी संख्या  (स्मार्ट फ़ोन )",
+              "name": "whats app से जुड़े विद्यार्थी संख्या  (स्मार्ट फ़ोन )",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
@@ -1435,7 +1435,7 @@ function sendDataToServer(survey) {
 					"entry.1022373984": q["Class"],
 // 					"entry.993949122": q["Subject"],
 					"entry.791177180": q["कुल नामांकन"],
-					"entry.510921074": q["watts app से जुड़े विद्यार्थी संख्या  (स्मार्ट फ़ोन )"],
+					"entry.510921074": q["whats app से जुड़े विद्यार्थी संख्या  (स्मार्ट फ़ोन )"],
 					"entry.2111580312": q["शिक्षा दर्शन लाभान्वित संख्या   (दूरदर्शन )"],
 					"entry.1681330709": q["शिक्षा वाणी लाभान्वित संख्या  (रेडियो )"],
 					"entry.79184850": q["विद्यालय आकर गृह कार्य लेने वाले  संख्या"],
