--- a/index.html
+++ b/index.html
@@ -1380,25 +1380,25 @@ var surveyJSON = {
               "inputType": "number"
             },
             {
-              "name": "शिक्षा दर्शन लाभान्वित संख्या   (दूरदर्शन )",
+              "name": "शिक्षा दर्शन लाभान्वित विद्यार्थी संख्या   (दूरदर्शन )",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
             },
             {
-              "name": "शिक्षा वाणी लाभान्वित संख्या  (रेडियो )",
+              "name": "शिक्षा वाणी लाभान्वित विद्यार्थी संख्या  (रेडियो )",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
             },
             {
-              "name": "विद्यालय आकर गृह कार्य लेने वाले  संख्या ",
+              "name": "विद्यालय आकर गृह कार्य लेने वाले विद्यार्थी संख्या ",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
             },
             {
-              "name": "विद्यार्थी के घर तक शिक्षक द्वारा गृह कार्य हेतु संख्या ",
+              "name": "विद्यार्थी के घर तक शिक्षक द्वारा गृह कार्य हेतु विद्यार्थी संख्या ",
               "cellType": "text",
               "isRequired": true,
               "inputType": "number"
@@ -1437,10 +1437,10 @@ function sendDataToServer(survey) {
 // 					"entry.993949122": q["Subject"],
 					"entry.791177180": q["कुल नामांकन"],
 					"entry.510921074": q["whats app से जुड़े विद्यार्थी संख्या  (स्मार्ट फ़ोन )"],
-					"entry.2111580312": q["शिक्षा दर्शन लाभान्वित संख्या   (दूरदर्शन )"],
-					"entry.1681330709": q["शिक्षा वाणी लाभान्वित संख्या  (रेडियो )"],
-					"entry.79184850": q["विद्यालय आकर गृह कार्य लेने वाले  संख्या"],
-					"entry.51442607": q["विद्यार्थी के घर तक शिक्षक द्वारा गृह कार्य हेतु संख्या"]
+					"entry.2111580312": q["शिक्षा दर्शन लाभान्वित विद्यार्थी संख्या   (दूरदर्शन )"],
+					"entry.1681330709": q["शिक्षा वाणी लाभान्वित विद्यार्थी संख्या  (रेडियो )"],
+					"entry.79184850": q["विद्यालय आकर गृह कार्य लेने वाले  विद्यार्थी संख्या"],
+					"entry.51442607": q["विद्यार्थी के घर तक शिक्षक द्वारा गृह कार्य हेतु विद्यार्थी संख्या"]
                     }
                     );
 					}
