--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@ var surveyJSON = {
           "isRequired": true,
           "choices": [
           {
+           "value":"रा.उ .मा.वि. अभयपुरा",
+           "visibleIf":"{peeoName}='अभयपुरा'"
+           },
+		  {
            "value":"रा.उ .मा.वि. नांगल",
            "visibleIf":"{peeoName}='अभयपुरा'"
            },
