--- a/index.html
+++ b/index.html
@@ -516,23 +516,23 @@ var surveyJSON = {
 			},
 			 {
             "value":"रा.बा.उ.मा.वि. दादिया",
-            "visibleIf":"{peeoName}='दादिया"
+            "visibleIf":"{peeoName}='दादिया'"
               },
 			   {
             "value":"रा.मा.वि. दिनारपुरा",
-"visibleIf":"{peeoName}='दादिया"
+"visibleIf":"{peeoName}='दादिया'"
               },
 			   {
             "value":"राउ.प्रा.वि. नई बस्ती दादिया",
-"visibleIf":"{peeoName}='दादिया"
+"visibleIf":"{peeoName}='दादिया'"
               },
 			   {
             "value":"रा.प्रावि. लालाणा जोहडा",
-"visibleIf":"{peeoName}='दादिया"
+"visibleIf":"{peeoName}='दादिया'"
               },
 			   {
             "value":"रा.प्रा.वि. तेजाणा जोहडा",
-"visibleIf":"{peeoName}='दादिया"
+"visibleIf":"{peeoName}='दादिया'"
               },
 			   {
             "value":"राउमाबावि. दौलतपुरा",
