--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@ var surveyJSON = {
             "value":"रा.प्रा.वि. पिपाणा जोहडा",
 			"visibleIf":"{peeoName}='कोलिडा'"
 			},
+		   {
+            "value":"रा.प्रा.वि.खातीवाला जोहडा",
+			"visibleIf":"{peeoName}='कोलिडा'"
+			},
 			 {
             "value":"रा.उ.मा.वि. गुगांरा",
             "visibleIf":"{peeoName}='गुंगारा'"
